--- a/calculator.html
+++ b/calculator.html
@@ -8,36 +8,38 @@
 </head>
 <body>
     <div class="gameContainer">
-        <div class="displayBar"></div>
-        <div class="buttonContainer">
-            <div class="leftGameContainer">
-                <div class ="numberContainer">
-                    <button id="1"></button>
-                    <button id="2"></button>
-                    <button id="3"></button>
+        <div class="displayBar">
+            <output id="output"></output>
+        </div>
+        <div class="allButtonsContainer"> 
+            <div class="inputContainer">
+                    <button id="1">1</button>
+                    <button id="2">2</button>
+                    <button id="3">3</button>
                     
-                    <button id="4"></button>
-                    <button id="5"></button>
-                    <button id="6"></button>
+                    <button id="4">4</button>
+                    <button id="5">5</button>
+                    <button id="6">6</button>
                     
-                    <button id="7"></button>
-                    <button id="8"></button>
-                    <button id="9"></button>
+                    <button id="7">7</button>
+                    <button id="8">8</button>
+                    <button id="9">9</button>
 
-                    <button id="clear"></button>
-                    <button id="0"></button>
-                    <button id="decimalPoint"></button>    
-                </div>
-                <div class="madeBy">Calculator Made By Cameron McMillan</div>
+                    <button id="clear">C</button>
+                    <button id="0">0</button>
+                    <button id="decimalPoint">.</button>
             </div>
             <div class ="operatorContainer">
-                <button id="add"></button>
-                <button id="subtract"></button>
-                <button id="multiply"></button>
-                <button id="divide"></button>
-                <button id="equals"></button>
+                <button id="add">+</button>
+                <button id="subtract">-</button>
+                <button id="multiply">X</button>
+                <button id="divide">/</button>
             </div>
         </div>
+        <div class="equalsContainer">
+            <button id="equals">=</button>
+        </div>
+    </div>
     <script src="calculator.js"></script>
 </body>
 </html>
